--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJBHGMQNL7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-NJBHGMQNL7');
+  </script>
 </body>
 
 </html>
