--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NJBHGMQNL7"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
